--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <video autoplay muted loop id="bg-video">
-        <source src="your-video-file.mp4" type="video/mp4">
+        <source src="noob.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
     </video>
     <div class="container">
-        <img src="your-logo.png" alt="Logo" class="logo"> <!-- Add your logo here -->
+        <img src="labani.png" alt="Logo" class="logo"> <!-- Add your logo here -->
         <h1>Your Name</h1>
         <p>Your Short Bio or Tagline</p>
         <div class="links">
