--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         </div>
     </div>
     
-    <a href="mailto:your-email@example.com" class="contact-btn">Contact Me</a> <!-- Add Contact Button -->
+    <a href="mailto:dolabani46@gmail.com" class="contact-btn">Contact Me</a> <!-- Add Contact Button -->
 </body>
 </html>
