--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </video>
     <div class="container">
         <img src="labani.png" alt="Logo" class="logo"> <!-- Add your logo here -->
-        <h1>Your Name</h1>
+        <h1>NOOB</h1>
         <p>Your Short Bio or Tagline</p>
         <div class="links">
             <a href="https://link1.com" target="_blank" class="btn small">Link 1</a>
@@ -30,6 +30,6 @@
         </div>
     </div>
     
-    <a href="mailto:dolabani46@gmail.com" class="contact-btn">Contact Me</a> <!-- Add Contact Button -->
+    <a href="mailto:your-email@example.com" class="contact-btn">Contact Me</a> <!-- Add Contact Button -->
 </body>
 </html>
