--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </video>
     <div class="container">
         <img src="labani.png" alt="Logo" class="logo"> <!-- Add your logo here -->
-        <h1>Your Name</h1>
-        <p>Your Short Bio or Tagline</p>
+        <h1>ᑎ O O ᗷ 📌</h1>
+        <p>💭Will be back with more projects : )</p>
         <div class="links">
             <a href="https://link1.com" target="_blank" class="btn small">Link 1</a>
             <a href="https://link2.com" target="_blank" class="btn medium">Link 2</a>
@@ -24,12 +24,10 @@
             <a href="https://link5.com" target="_blank" class="btn small">Link 5</a>
         </div>
         <div class="socials">
-            <a href="https://twitter.com/yourprofile" target="_blank" class="social"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com/yourprofile" target="_blank" class="social"><i class="fab fa-instagram"></i></a>
-            <a href="https://facebook.com/yourprofile" target="_blank" class="social"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://t.me/l_abani" target="_blank" class="social"><i class="fab fa-telgram"></i></a>
         </div>
     </div>
     
-    <a href="mailto:your-email@example.com" class="contact-btn">Contact Me</a> <!-- Add Contact Button -->
+    <a href="https://t.me/l_abani" class="contact-btn">Contact Me</a> <!-- Add Contact Button -->
 </body>
 </html>
