--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Linktree</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -14,17 +14,14 @@
     </video>
     <div class="container">
         <img src="labani.png" alt="Logo" class="logo"> <!-- Add your logo here -->
-        <h1>ᑎ O O ᗷ 📌</h1>
+        <h1>ᑎ O O ᗷ 🖤</h1>
         <p>💭Will be back with more projects : )</p>
         <div class="links">
-            <a href="https://link1.com" target="_blank" class="btn small">Link 1</a>
-            <a href="https://link2.com" target="_blank" class="btn medium">Link 2</a>
-            <a href="https://link3.com" target="_blank" class="btn small">Link 3</a>
-            <a href="https://link4.com" target="_blank" class="btn medium">Link 4</a>
-            <a href="https://link5.com" target="_blank" class="btn small">Link 5</a>
+            <a href="https://t.me/NOOBPrivate" target="_blank" class="btn small">Channel 👀</a>
+            <a href="https://t.me/+Vng7VDXDy_M4MjNl" target="_blank" class="btn medium">Leech Group 💤</a>
         </div>
         <div class="socials">
-            <a href="https://t.me/l_abani" target="_blank" class="social"><i class="fab fa-telgram"></i></a>
+            <a href="https://Instagram.com/_.n_o_o_b._" target="_blank" class="social"><i class="fab fa-instgram"></i></a>
         </div>
     </div>
     
