--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1>ᑎ O O ᗷ 🖤</h1>
         <p>💭Will be back with more projects : )</p>
         <div class="links">
-            <a href="https://t.me/NOOBPrivate" target="_blank" class="btn small">Channel 👀</a>
-            <a href="https://t.me/+Vng7VDXDy_M4MjNl" target="_blank" class="btn medium">Leech Group 💤</a>
+            <a href="https://t.me/NOOBPrivate" target="_blank" class="btn small">Ｃｈａｎｎｅｌ 👀</a>
+            <a href="https://t.me/+Vng7VDXDy_M4MjNl" target="_blank" class="btn medium">Ｌｅｅｃｈ Ｇｒｏｕｐ 💤</a>
         </div>
         <div class="socials">
             <a href="https://Instagram.com/_.n_o_o_b._" target="_blank" class="social"><i class="fab fa-instgram"></i></a>
