--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="https://t.me/+Vng7VDXDy_M4MjNl" target="_blank" class="btn medium">Ｌｅｅｃｈ Ｇｒｏｕｐ 💤</a>
         </div>
         <div class="socials">
-            <a href="https://Instagram.com/_.n_o_o_b._" target="_blank" class="social"><i class="fab fa-instgram"></i></a>
+            <a href="https://twitter.com/noobxoop" target="_blank" class="social"><i class="fab fa-twitter"></i></a>
         </div>
     </div>
     
