--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </video>
     <div class="container">
         <img src="labani.png" alt="Logo" class="logo"> <!-- Add your logo here -->
-        <h1>ᑎ O O ᗷ 🖤</h1>
+        <h1>ɴᴏᴏʙ ᯓ ᡣ𐭩</h1>
         <p>💭Will be back with more projects : )</p>
         <div class="links">
             <a href="https://t.me/NOOBPrivate" target="_blank" class="btn small">Ｃｈａｎｎｅｌ 👀</a>
